correct layout spacing

--- a/src/styles/components/Layout.module.css
+++ b/src/styles/components/Layout.module.css
@@ -185,7 +185,7 @@
   color: rgb(107, 114, 128);
 }
 
-.main {
+/* .main {
   margin-top: 60px;
 }
 
@@ -197,4 +197,4 @@
   padding-right: 1rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
-}
+} */
